--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="Weather.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="3D.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
