--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -121,7 +121,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="3D.h" />
+    <ClInclude Include="_3D.h" />
     <ClInclude Include="A.h" />
     <ClInclude Include="Abonent.h" />
     <ClInclude Include="Apple.h" />
