--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="Weather.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
-    <ClInclude Include="3D.h">
+    <ClInclude Include="_3D.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
   </ItemGroup>
