--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -68,5 +68,11 @@
     <ClInclude Include="_3D.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="Array2D.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticArray.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
