--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -121,6 +121,8 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Array2D.h" />
+    <ClInclude Include="StaticArray.h" />
     <ClInclude Include="_3D.h" />
     <ClInclude Include="A.h" />
     <ClInclude Include="Abonent.h" />
