--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Array1D.inl" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
