--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Source.cpp">
       <Filter>Заголовочные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Array1D.inl">
-      <Filter>Заголовочные файлы</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Apple.h">
@@ -75,6 +72,12 @@
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
     <ClInclude Include="StaticArray.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="MyData.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
   </ItemGroup>
