--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClInclude Include="Stack.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
