--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <ClInclude Include="Array2D.h" />
     <ClInclude Include="MyData.h" />
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="StaticArray.h" />
     <ClInclude Include="_3D.h" />
