--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -122,7 +122,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array2D.h" />
+    <ClInclude Include="List.h" />
     <ClInclude Include="MyData.h" />
+    <ClInclude Include="PiggyBank.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="StaticArray.h" />
