--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -83,5 +83,11 @@
     <ClInclude Include="Queue.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="PiggyBank.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
