--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="List.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="BTree.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
