--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="BTree.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="PrintServer.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
