--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="PrintServer.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="BasePDR.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
