--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animal.h" />
     <ClInclude Include="Array2D.h" />
     <ClInclude Include="BasePDR.h" />
     <ClInclude Include="BTree.h" />
