--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="Inheritance.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="Animal.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
