--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="MyData.h" />
     <ClInclude Include="MyString.h" />
     <ClInclude Include="PiggyBank.h" />
+    <ClInclude Include="Ploshad.h" />
     <ClInclude Include="PrintServer.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
