--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -110,6 +110,9 @@
     <ClInclude Include="Ploshad.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="MyException.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Base.bin">
