--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="Inheritance.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="MyData.h" />
+    <ClInclude Include="MyException.h" />
     <ClInclude Include="MyString.h" />
     <ClInclude Include="PiggyBank.h" />
     <ClInclude Include="Ploshad.h" />
