--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -121,11 +121,15 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Alives.h" />
     <ClInclude Include="Animal.h" />
     <ClInclude Include="Array2D.h" />
     <ClInclude Include="BasePDR.h" />
+    <ClInclude Include="Boo.h" />
     <ClInclude Include="BTree.h" />
     <ClInclude Include="Car.h" />
+    <ClInclude Include="Deads.h" />
+    <ClInclude Include="Foo.h" />
     <ClInclude Include="Inheritance.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="MyData.h" />
