--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -128,5 +128,11 @@
     <ClInclude Include="Warrior.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="Pointer.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
