--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -160,6 +160,9 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="Weather.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Base.bin" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
