--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -135,4 +135,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Base.bin">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
