--- a/Проект2.vcxproj.filters
+++ b/Проект2.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClInclude Include="SmartPtr.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
+    <ClInclude Include="Calc.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Base.bin">
