--- a/Проект2.vcxproj
+++ b/Проект2.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="Races.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Calc.h" />
     <ClInclude Include="Pointer.h" />
     <ClInclude Include="SmartPtr.h" />
     <ClInclude Include="Timer.h" />
